--- a/public/assignment/views/page/page-new.view.client.html
+++ b/public/assignment/views/page/page-new.view.client.html
@@ -5,8 +5,8 @@
 			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page" class="navbar-text pull-left">
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
-			<a href="#" class="navbar-brand">New Page</a>
-			<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website/{{model.wid}}/page">
+			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/new" class="navbar-brand">New Page</a>
+			<a ng-click="model.createNewPage(mode.page.name,model.page.title)" role="button" class="navbar-text pull-right">
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
