--- a/public/assignment/views/widget/widget-list.view.client.html
+++ b/public/assignment/views/widget/widget-list.view.client.html
@@ -3,25 +3,29 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
-			<a href="#/user/:uid/website/:wid/page" class="navbar-text pull-left">
+			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page" class="navbar-text pull-left">
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
-			<a href="#" class="navbar-brand">Widgets</a>
-			<a class="navbar-text pull-right" href="#/user/:uid/website/:wid/page/:pid/widget/new">
+			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}/widget" class="navbar-brand">Widgets</a>
+			<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}/widget/new">
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
 	</nav>
 
-	<div ng-repeat="widget in model.widgets">
-		{{widget.name}}
-
-	</div>
+	<ul class="list-group">
+		<li ng-repeat="widget in model.widgets" class="list-group-item">
+			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}//widget/{{widget._id}}">{{widget.name}}</a>
+			<a class="pull-right" href="#/user/{{model.uid}}/website/{{model.wid}}//page/{{model.pid}}//widget/{{widget._id}}">
+				<span class="glyphicon glyphicon-cog"></span>
+			</a>
+		</li>
+	</ul>
 
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="#/user/:uid">
+			<a class="navbar-text pull-right" href="#/user/{{model.uid}}">
 				<span class="glyphicon glyphicon-user"></span>
 			</a>
 		</div>
