delete page fixed

--- a/public/assignment/views/website/website-list.view.client.html
+++ b/public/assignment/views/website/website-list.view.client.html
@@ -3,6 +3,9 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
+			<a href="#/user/{{model.uid}}" class="navbar-text pull-left">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
 			<a href="#/user/{{model.uid}}/website" class="navbar-brand">Websites</a>
 			<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website/new">
 				<span class="glyphicon glyphicon-plus"></span>
