--- a/public/assignment/views/page/page-edit.view.client.html
+++ b/public/assignment/views/page/page-edit.view.client.html
@@ -6,7 +6,7 @@
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
 			<a href="#" class="navbar-brand">Edit Page</a>
-			<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website/{{model.wid}}/page">
+			<a  ng-click="model.savePage(model.page.name,model.page.description)" role="button" class="navbar-text pull-right" >
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
@@ -20,11 +20,11 @@
 
 		<div class="form-group">
 			<label for="title">Title</label>
-			<input id="title" type="text" class="form-control" ngmodel="model.page.title" placeholder="Page Title"/>
+			<input id="title" type="text" class="form-control" ngmodel="model.page.description" placeholder="Page Title"/>
 		</div>
 
 		<div class="form-group">
-			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page" role="button" class="btn btn-danger form-control">Delete</a>
+			<a ng-click="model.deletePage()" role="button" class="btn btn-danger form-control">Delete</a>
 		</div>
 
 
