--- a/public/assignment/views/page/page-edit.view.client.html
+++ b/public/assignment/views/page/page-edit.view.client.html
@@ -6,21 +6,22 @@
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
 			<a href="#" class="navbar-brand">Edit Page</a>
-			<a  ng-click="model.savePage(model.page.name,model.page.description)" role="button" class="navbar-text pull-right" >
+			<a  href="#/user/{{model.uid}}/website/{{model.wid}}/page" class="navbar-text pull-right" >
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
 	</nav>
 
 	<form>
+
 		<div class="form-group">
-			<label for="name">Name</label>
-			<input id="name" type="text" class="form-control" ngmodel="model.page.name" placeholder="Blog Post"/>
+			<label for="name1">Name</label>
+			<input id="name1" type="text" class="form-control" ng-model="model.page.name" placeholder="Blog Post"/>
 		</div>
 
 		<div class="form-group">
-			<label for="title">Title</label>
-			<input id="title" type="text" class="form-control" ngmodel="model.page.description" placeholder="Page Title"/>
+			<label for="description1">Title</label>
+			<textarea id="description1" class="form-control" ng-model="model.page.description" placeholder="Page Title"></textarea>
 		</div>
 
 		<div class="form-group">
