--- a/public/assignment/views/page/page-new.view.client.html
+++ b/public/assignment/views/page/page-new.view.client.html
@@ -6,7 +6,7 @@
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
 			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/new" class="navbar-brand">New Page</a>
-			<a ng-click="model.createNewPage(mode.page.name,model.page.title)" role="button" class="navbar-text pull-right">
+			<a ng-click="model.createNewPage(mode.page.name,model.page.description)" role="button" class="navbar-text pull-right">
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
@@ -14,13 +14,13 @@
 
 	<form>
 		<div class="form-group">
-			<label for="name">Name</label>
-			<input id="name" type="text" class="form-control" ng-model="model.page.name" placeholder="Page Name"/>
+			<label for="name1">Name</label>
+			<input id="name1" type="text" class="form-control" ng-model="model.page.name" placeholder="Page Name"/>
 		</div>
 
 		<div class="form-group">
 			<label for="title">Title</label>
-			<input id="title" type="text" class="form-control" ng-model="model.page.title" placeholder="Page Title"/>
+			<input id="title" type="text" class="form-control" ng-model="model.page.description" placeholder="Page Title"/>
 		</div>
 
 	</form>
