widget chooser and partial dispaly in widget list working

--- a/public/assignment/views/widget/widget-chooser.view.client.html
+++ b/public/assignment/views/widget/widget-chooser.view.client.html
@@ -11,7 +11,7 @@
 	</nav>
 
 
-	<!--div class="row">
+	<div class="row">
 		<a href="widget-heading.html" class="navbar-text">Header</a>
 	</div>
 
@@ -49,7 +49,7 @@
 
 	<div class="row">
 		<a href="widget-heading.html" class="navbar-text">Repeater</a>
-	</div-->
+	</div>
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
