--- a/public/assignment/views/widget/widget-list.view.client.html
+++ b/public/assignment/views/widget/widget-list.view.client.html
@@ -8,19 +8,33 @@
 			</a>
 			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}/widget" class="navbar-brand">Widgets</a>
 			<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}/widget/new">
-				<span class="glyphicon glyphicon-ok"></span>
+				<span class="glyphicon glyphicon-plus"></span>
 			</a>
 		</div>
 	</nav>
 
+
 	<ul class="list-group">
 		<li ng-repeat="widget in model.widgets" class="list-group-item">
-			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}//widget/{{widget._id}}">{{widget.name}}</a>
-			<a class="pull-right" href="#/user/{{model.uid}}/website/{{model.wid}}//page/{{model.pid}}//widget/{{widget._id}}">
+			<div ng-switch="widget.widgetType">
+				<div ng-switch-when="HEADING">
+					<ng-include src="widget-heading.view.client.html"/>
+				</div>
+				<div ng-switch-when="IMAGE">
+					<ng-include src="widget-image.view.client.html"/>
+				</div>
+				<div ng-switch-when="YOUTUBE">
+					<ng-include src="widget-youtube.view.client.html"/>
+				</div>
+			</div>
+
+			<a class="pull-right" href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}/widget/{{widget._id}}">
 				<span class="glyphicon glyphicon-cog"></span>
 			</a>
 		</li>
 	</ul>
+
+
 
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
