--- a/public/assignment/views/widget/widget-youtube.view.client.html
+++ b/public/assignment/views/widget/widget-youtube.view.client.html
@@ -1,5 +1,5 @@
 
-<!--div class="container">
+<div class="container">
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
@@ -51,7 +51,4 @@
 		</div>
 	</nav>
 
-</div-->
-<div>
-    youtube
 </div>
