--- a/public/assignment/views/widget/widget-heading.view.client.html
+++ b/public/assignment/views/widget/widget-heading.view.client.html
@@ -3,11 +3,11 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
-			<a href="widget-list.html" class="navbar-text pull-left">
+			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}/widget" class="navbar-text pull-left">
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
-			<a href="#" class="navbar-brand">Widget Edit</a>
-			<a class="navbar-text pull-right" href="website-list.html">
+			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}/widget/{{model.wgid}}" class="navbar-brand">Widget Edit</a>
+			<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}/widget">
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
@@ -31,7 +31,7 @@
 		</div>
 
 		<div class="form-group">
-			<a href="widget-list.html" role="button" class="btn btn-danger form-control">Delete</a>
+			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}/widget" role="button" class="btn btn-danger form-control">Delete</a>
 		</div>
 
 
@@ -39,7 +39,7 @@
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="../user/profile.html">
+			<a class="navbar-text pull-right" href="#/user/{{model.uid}}">
 				<span class="glyphicon glyphicon-user"></span>
 			</a>
 		</div>
