--- a/public/assignment/views/website/website-edit.view.client.html
+++ b/public/assignment/views/website/website-edit.view.client.html
@@ -25,6 +25,7 @@
 				<a href="#/user/{{model.uid}}" class="navbar-text pull-left">
 					<span class="glyphicon glyphicon-chevron-left"></span>
 				</a>
+				<a href="#" class="navbar-brand">Edit Website</a>
 				<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website">
 					<span class="glyphicon glyphicon-ok"></span>
 				</a>
@@ -52,7 +53,7 @@
 			<form>
 				<div class="form-group">
 					<label for="name">Website Name</label>
-					<input id="name" type="text" class="form-control"ng-model="model.website.name"  placeholder="Blogger"/>
+					<input id="name" type="text" class="form-control" ng-model="model.website.name" placeholder="Blogger"/>
 				</div>
 
 				<div class="form-group">
@@ -61,7 +62,7 @@
 				</div>
 
 				<div class="form-group">
-					<a href="#/user/{{model.uid}}/website" role="button" class="btn btn-danger form-control">Delete</a>
+					<a ng-click="model.deleteWebsite(model.website._id)" role="button" class="btn btn-danger form-control">Delete</a>
 				</div>
 			</form>
 		</div>
