--- a/public/assignment/views/user/login.view.client.html
+++ b/public/assignment/views/user/login.view.client.html
@@ -11,7 +11,7 @@
 
 		</div>
 			<div class="form-group">
-			<a ng-click="model.login(model.user.username, model.user.password)" role="button" class="btn btn-primary form-control">Login</a>
+			<a ng-click="model.login(model.user)" role="button" class="btn btn-primary form-control">Login</a>
 			<a href="#/register" role="button" class="btn btn-success form-control">Register</a>
 			</div>
 		</form>
