login web service working

--- a/public/assignment/views/user/register.view.client.html
+++ b/public/assignment/views/user/register.view.client.html
@@ -8,7 +8,7 @@
 			<input type="text" class="form-control" ng-model="model.user.username" placeholder="username"/>
 			<input type="password" class="form-control" ng-model="model.user.password" placeholder="password"/>
 			<input type="password" class="form-control" ng-model="model.user.verifypassword" placeholder="verify password"/>
-			<a ng-click="model.register(model.user.username,model.user.password,model.user.verifypassword)" role="button" class="btn btn-primary form-control">Register</a>
+			<a ng-click="model.register(model.user)" role="button" class="btn btn-primary form-control">Register</a>
 			<a href="#/login" role="button" class="btn btn-danger form-control">Cancel</a>
 
 		</form>
