--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -2,7 +2,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
 			<a class="navbar-brand">Profile</a>
-			<a class="navbar-text pull-right" href="#/user/{{model.user._id}}">
+			<a class="navbar-text pull-right" href="#">
 				<span class="glyphicon glyphicon-ok white"></span>
 			</a>
 		</div>
@@ -46,7 +46,7 @@
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="#/user/{{model.	user._id}}">
+			<a class="navbar-text pull-right" href="#/user/{{model.user._id}}">
 				<span class="glyphicon glyphicon-user white"></span>
 			</a>
 		</div>
