website controller fixed for webservice

--- a/public/assignment/views/website/website-edit.view.client.html
+++ b/public/assignment/views/website/website-edit.view.client.html
@@ -15,7 +15,7 @@
 				</div>
 				<div class="col-sm-8 no-padding-right">
 					<a href="#" class="navbar-brand">Edit Website</a>
-					<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website">
+					<a class="navbar-text pull-right" ng-click="model.updateWebiste(model.website)">
 						<span class="glyphicon glyphicon-ok"></span>
 					</a>
 				</div>
@@ -26,7 +26,7 @@
 					<span class="glyphicon glyphicon-chevron-left"></span>
 				</a>
 				<a href="#" class="navbar-brand">Edit Website</a>
-				<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website">
+				<a class="navbar-text pull-right" ng-click="model.updateWebsite(model.website)">
 					<span class="glyphicon glyphicon-ok"></span>
 				</a>
 			</div>
