web service modified for web servcie

--- a/public/assignment/views/page/page-new.view.client.html
+++ b/public/assignment/views/page/page-new.view.client.html
@@ -6,7 +6,7 @@
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
 			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/new" class="navbar-brand">New Page</a>
-			<a ng-click="model.createNewPage(model.page.name,model.page.description)" role="button" class="navbar-text pull-right">
+			<a ng-click="model.createNewPage(model.page)" role="button" class="navbar-text pull-right">
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
