--- a/public/assignment/views/widget/widget-chooser.view.client.html
+++ b/public/assignment/views/widget/widget-chooser.view.client.html
@@ -4,57 +4,28 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
 			<a href="#/user/{{model.uid}}/website/{{model.wid}}/page/{{model.pid}}/widget" class="navbar-text pull-left">
-				<span class="glyphicon glyphicon-chevron-left"></span>
+				<span class="glyphicon glyphicon-chevron-left white"></span>
 			</a>
 			<a href="#" class="navbar-brand">Choose Widget</a>
 		</div>
 	</nav>
 
 
-	<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Header</a>
+	<div class="list-item">
+		<a ng-click="model.goToWidget('heading')">Header</a>
+	</div>
+	<div class="list-item">
+		<a ng-click="model.goToWidget('image')">Image</a>
+	</div>
+	<div class="list-item">
+		<a ng-click="model.goToWidget('youtube')">Youtube</a>
 	</div>
 
-	<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Label</a>
-	</div>
-
-	<div class="row">
-		<a href="widget-heading.html" class="navbar-text">HTML</a>
-	</div>
-
-	<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Text Input</a>
-	</div>
-
-	<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Link</a>
-	</div>
-
-	<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Button</a>
-	</div>
-
-	<div class="row">
-		<a href="widget-image.html" class="navbar-text">Image</a>
-	</div>
-
-	<div class="row">
-		<a href="widget-youtube.html" class="navbar-text">YouTube</a>
-	</div>
-
-	<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Data Table</a>
-	</div>
-
-	<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Repeater</a>
-	</div>
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
 			<a class="navbar-text pull-right" href="#/user/{{model.uid}}">
-				<span class="glyphicon glyphicon-user"></span>
+				<span class="glyphicon glyphicon-user white"></span>
 			</a>
 		</div>
 	</nav>
