--- a/public/assignment/views/widget/widget-youtube-edit.view.client.html
+++ b/public/assignment/views/widget/widget-youtube-edit.view.client.html
@@ -12,28 +12,42 @@
 	</nav>
 
 
+
 	<div class="row container-fluid">
 		<br>
 		<div class="col-sm-12">
 			<form>
 				<div class="form-group">
 					<label for="Name">Name</label>
-					<input type="text" ng-model="model.widget.name" class="form-control" id="name" placeholder="Name">
+					<input type="text"
+						   ng-model="model.widget.name"
+						   class="form-control"
+						   id="name"
+						   placeholder="Name">
 				</div>
 				<div class="form-group">
 					<label for="Text">Text</label>
-					<input type="text" ng-model="model.widget.text" class="form-control" id="text" placeholder="Text" required>
+					<input type="text"
+						   ng-model="model.widget.text"
+						   class="form-control"
+						   id="text"
+						   placeholder="Text">
 				</div>
 				<div class="form-group">
-					<label for="Size">Size</label>
-					<select class="form-control" ng-model="model.widget.size" id="Size">
-						<option>1</option>
-						<option>2</option>
-						<option>3</option>
-						<option>4</option>
-						<option>5</option>
-						<option>6</option>
-					</select>
+					<label for="url">URL</label>
+					<input type="text"
+						   ng-model="model.widget.url"
+						   class="form-control"
+						   id="url"
+						   placeholder="Youtube URL">
+				</div>
+				<div class="form-group">
+					<label for="width">Width</label>
+					<input type="text"
+						   ng-model="model.widget.width"
+						   class="form-control"
+						   id="width"
+						   placeholder="Width in %">
 				</div>
 				<a class="btn btn-danger  btn-block" ng-click="model.deleteWidget(model.widget)">Delete</a>
 			</form>
