--- a/public/assignment/views/widget/widget-list.view.client.html
+++ b/public/assignment/views/widget/widget-list.view.client.html
@@ -1,3 +1,4 @@
+<script src="../../config.js"></script>
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">
 		<a class="navbar-text pull-left" href="#/user/{{model.uid}}/website/{{model.wid}}/page">
