--- a/public/project/CSS/style.css
+++ b/public/project/CSS/style.css
@@ -56,10 +56,12 @@ body {
 
 }
 
-
+.results-top-padding{
+    padding-top: 50px;
+}
 
 .users-image{
-    background: url('../images/linen-background-spoon-19599345.jpg')no-repeat center center fixed;
+    background-color: black;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -70,7 +72,7 @@ body {
     box-shadow: 0 2px 5px #999;
 }
 .register-card {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .placing
