--- a/public/project/client/views/search/results.view.html
+++ b/public/project/client/views/search/results.view.html
@@ -1,17 +1,4 @@
-<div class="users-image">
-<div class="container-fluid banner site-color-background1 transparent">
-    <div class="container search-header">
-        <div class="row">
-            <div class="col-lg-8">
-                <h3 class="pull-left">Search Results for {{name}}:</h3>
-            </div>
-            <div class="col-lg-4">
-                <h3 class="pull-right">1-10</h3>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container-fluid">
+<div class="container-fluid results-top-padding">
     <div class="col-lg-6">
         <div class="card elevation1 search-result" ng-repeat="hotel in info.response.venues">
             <a href="#/details/{{hotel.id}}">
@@ -31,5 +18,5 @@
             </div>
     </div>
 </div>
-</div>
+
 
