--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -10,183 +10,60 @@
 </div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-sm-4 col-sm-offset-4">
             <div class="card elevation2 register-card center-block">
                 <div class="form-header text-center site-color-background">
                     <h2 class="specific">My Details</h2>
-                    <hr>
                 </div>
                 <div class="container-fluid form-container">
                     <form class="form-horizontal">
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="username">Username :</label>
                             <div class="col-sm-8">
-                            <input type="text" ng-model ="model.user.username" id="username" class="form-control text-input center-block" placeholder="First Name">
-                        </div>
+                                <input type="text" ng-model="model.user.username" id="username"
+                                       class="form-control text-input center-block" placeholder="First Name">
                             </div>
+                        </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="password">Password :</label>
                             <div class="col-sm-8">
-                            <input type="password" ng-model ="model.user.password" id="password" class="form-control text-input center-block" placeholder="Password">
+                                <input type="password" ng-model="model.user.password" id="password"
+                                       class="form-control text-input center-block" placeholder="Password">
                             </div>
-                            </div>
-                    <hr>
+                        </div>
+                        <hr>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="firstname">First Name:</label>
                             <div class="col-sm-8">
-                            <input type="text" ng-model ="model.user.firstName" id ="firstname" class="form-control text-input center-block" placeholder="First Name">
-                        </div>
+                                <input type="text" ng-model="model.user.firstName" id="firstname"
+                                       class="form-control text-input center-block" placeholder="First Name">
                             </div>
+                        </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="lastname">Last Name:</label>
                             <div class="col-sm-8">
-                            <input type="text" ng-model ="model.user.lastName" id="lastname" class="form-control text-input center-block" placeholder="Last Name">
-                        </div>
+                                <input type="text" ng-model="model.user.lastName" id="lastname"
+                                       class="form-control text-input center-block" placeholder="Last Name">
                             </div>
+                        </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="email1">Email:</label>
                             <div class="col-sm-8">
-                            <input type="email" ng-model ="model.user.email" id="email1" class="form-control text-input center-block" placeholder="abc@abc.com">
-                        </div>
+                                <input type="email" ng-model="model.user.email" id="email1"
+                                       class="form-control text-input center-block" placeholder="abc@abc.com">
+                            </div>
                         </div>
                         <hr>
-                    <div class="form-group">
-                        <button value="Update" ng-click = "model.update(model.user)" class="btn btn-info btn-block search-button center-block">Update</button>
-                    </div>
+                        <div class="form-group">
+                            <button value="Update" ng-click="model.update(model.user)"
+                                    class="btn btn-info btn-block center-block">Update
+                            </button>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="col-sm-5 col-md-5 col-lg-5">
-            <div class="center-block ">
-                <div class="form-header card elevation1">
-                    <h2 class="site-color">My Reviews</h2>
-                    <hr>
-                    <div class="table-responsive">
-                        <table class="table table-striped table-hover">
-                            <thead>
-                            <tr>
-                                <th>
-                                    Restaurant Name
-                                </th>
-                                <th>
-                                    Reviews
-                                </th>
-                                <th>
-                                    Action
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>
-                                    &nbsp;
-                                </td>
-                                <td>
-                                    <input type="text" ng-model ="model.title" class="form-control input-md" placeholder="Review">
-                                </td>
-                                <td>
-                                    <div>
-                                        <a ng-click="model.updateReview(model.title)" role="button" class="btn btn-success">
-                                            <span class="glyphicon glyphicon-ok favourites" aria-hidden="true"></span>
-                                        </a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr ng-repeat="i in model.reviews">
-                                <td>
-                                    <a href="#/details/{{i.restaurantId}}"><b>{{i.restaurantName}}</b></a>
-                                </td>
-                                <td>
-                                    <b>{{i.reviews}}</b>
-                                </td>
-                                <td>
-                                    <div>
-                                        <a  ng-click = "model.deleteReview($index)" role="button" class="btn btn-danger" aria-label="Add">
-                                            <span  class="glyphicon glyphicon-remove favourites" aria-hidden="true"></span>
-
-                                        </a>
-                                        <a ng-click = "model.selectReview($index)" role="button" class="btn btn-info">
-                                            <span  class="glyphicon glyphicon-pencil favourites" aria-hidden="true"></span>
-
-                                        </a>
-                                    </div>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-
-                <div class="form-header card elevation1">
-                    <h2 class="site-color">My Favourites</h2>
-                    <hr>
-                        <div class="container-fluid">
-                            <div ng-repeat="hotel in model.forms">
-                                <div class="row">
-                                <div class="col-lg-8">
-                                    <a href="#/details/{{hotel.restaurantId}}"><b>{{hotel.restaurantName}}</b></a>
-                                </div>
-                                <div class="col-lg-2">
-
-                                        <a  ng-click = "model.deleteFavourite($index)" role="button" class="btn btn-default btn-danger" aria-label="Add">
-                                            <span class="glyphicon glyphicon-remove favourites" aria-hidden="true"></span>
-                                        </a>
-
-                                </div>
-                                </div>
-                                <br>
-                            </div>
-                        </div>
 
 
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3">
-            <div class="center-block ">
-                <div class="form-header card elevation1">
-                    <h2 class="site-color">I am Following!</h2>
-                    <hr>
-                    <div class="container-fluid">
-                        <div ng-repeat="username in model.follows track by $index">
-                            <div class="row">
-                                <div class="col-lg-8">
-                            <p><b>{{username}}</b></p>
-                                </div>
-                                <div class="col-lg-2">
-
-                                    <a  ng-click = "model.deleteUsersIFollow(username)" role="button" class="btn btn-default btn-danger" aria-label="Add">
-                                        <span class="glyphicon glyphicon-remove favourites" aria-hidden="true"></span>
-                                    </a>
-                                </div>
-                            </div>
-                            <br>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-header card elevation1">
-                    <h2 class="site-color">My Followers!</h2>
-                    <hr>
-                    <div class="container-fluid">
-                        <div ng-repeat="username in model.followedBy track by $index">
-                            <div class="row">
-                                <div class="col-lg-8">
-                                    <p><b>{{username}}</b></p>
-                                </div>
-                                <div class="col-lg-2">
-
-                                    <a  ng-click = "model.deleteMyFollowers(username)" role="button" class="btn btn-default btn-danger" aria-label="Add">
-                                        <span class="glyphicon glyphicon-remove favourites" aria-hidden="true"></span>
-                                    </a>
-                                </div>
-                            </div>
-                            <br>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
