--- a/public/project/client/views/users/login.view.html
+++ b/public/project/client/views/users/login.view.html
@@ -1,12 +1,11 @@
 <div  class="users-image height-100-pct">
 <div class="container">
     <div class="row centered-form">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-8">
-            <div class="card elevation2 register-card center-block">
-                <div class="form-header text-center site-color-background">
-                    <h2 class="specific">LOGIN</h2>
-                    <hr>
+        <div class="col-lg-7"></div>
+        <div class="col-lg-5">
+            <div class="card register-card">
+                <div class="form-header text-center site-color-background curvy">
+                    <h4 class="specific">Login</h4>
                 </div>
                 <div class="container-fluid form-container">
                     <form class="form-horizontal">
@@ -22,7 +21,7 @@
                             <input type="password" ng-model="model.user.password" id="password" class="form-control form-text-input center-block" placeholder="Password">
                         </div>
                         <div class="form-group">
-                            <button value="Login" ng-click="model.login(model.user);" class="btn btn-info btn-block search-button center-block">Login</button>
+                            <button value="Login" ng-click="model.login(model.user);" class="btn btn-info center-block">Login</button>
                         </div>
                         <!--<div class="form-group">-->
                             <!--<a href="/auth/facebook" class="btn btn-primary btn-block center-block">-->
@@ -38,7 +37,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-2"></div>
+
     </div>
 </div>
 </div>
