--- a/public/project/client/views/users/following.view.html
+++ b/public/project/client/views/users/following.view.html
@@ -1,8 +1,15 @@
 <div class="banner new-background elevation2">
     <div class="container">
-        <div class="row profile-header">
-            <div class="inverted-color profile-details">
-                <h1 class="site-color"> Welcome {{user.username}}!!!</h1>
+
+        <div class="row">
+            <div class="col-sm-4 profile-nav-section">
+                <a class="profile-nav" href="#/myreviews">My Reviews</a>
+            </div>
+            <div class="col-sm-4 profile-nav-section">
+                <a class="profile-nav" href="#/followers">Followers</a>
+            </div>
+            <div class="col-sm-4 profile-nav-section">
+                <a class="profile-nav" href="#/following">Following</a>
             </div>
         </div>
     </div>
@@ -12,7 +19,7 @@
     <div class="row">
 
 
-        <div class="col-lg-3 col-md-3 col-sm-3">
+        <div class="col-sm-4 col-sm-offset-4">
             <div class="center-block ">
                 <div class="form-header card elevation1">
                     <h2 class="site-color">Following</h2>
