--- a/public/project/client/views/users/register.view.html
+++ b/public/project/client/views/users/register.view.html
@@ -1,12 +1,11 @@
 <div  class="users-image height-100-pct">
 <div class="container">
     <div class="row centered-form">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-8">
+        <div class="col-lg-7"></div>
+        <div class="col-lg-5">
             <div class="card elevation2 register-card center-block">
-                <div class="form-header text-center site-color-background">
-                    <h2 class="specific">REGISTER</h2>
-                    <hr>
+                <div class="form-header text-center site-color-background curvy">
+                    <h4 class="specific">Register</h4>
                 </div>
                 <div class="container-fluid form-container">
                     <form class="form-horizontal" role="form">
@@ -32,14 +31,13 @@
                             </div>
                             <hr>
                             <div class="form-group">
-                                <input type="submit" value="Register" ng-click="model.register(model.user)"class="btn btn-info btn-block search-button">
+                                <input type="submit" value="Register" ng-click="model.register(model.user)"class="btn btn-info center-block ">
                             </div>
 
                     </form>
                 </div>
                 </div>
         </div>
-        <div class="col-lg-2"></div>
     </div>
 </div>
 </div>
