--- a/public/project/client/views/search/results.view.html
+++ b/public/project/client/views/search/results.view.html
@@ -1,5 +1,5 @@
 <div class="container-fluid results-top-padding">
-    <div class="col-lg-6">
+    <div class="col-lg-6 col-lg-offset-3">
         <div class="card elevation1 search-result" ng-repeat="hotel in info.response.venues">
             <a href="#/details/{{hotel.id}}">
                 <div class="row container-fluid search-content">
