--- a/public/project/client/views/users/followers.view.html
+++ b/public/project/client/views/users/followers.view.html
@@ -15,14 +15,11 @@
     </div>
 
 </div>
-<div class="container-fluid">
+<div class="container-fluid new-background">
     <div class="row">
 
         <div class="col-sm-4 col-sm-offset-4">
             <div class="center-block ">
-
-
-
                 <div class="form-header card elevation1">
                     <h2 class="site-color">My Followers!</h2>
                     <hr>
