--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -1,4 +1,4 @@
-<div class="banner new-background elevation2">
+<div class="banner elevation2">
     <div class="container">
 
         <div class="row">
@@ -14,7 +14,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid">
+<div class="container-fluid new-background">
     <div class="row">
         <div class="col-sm-4 col-sm-offset-4">
             <div class="card register-card center-block">
