--- a/public/project/client/views/users/myreviews.view.html
+++ b/public/project/client/views/users/myreviews.view.html
@@ -1,4 +1,4 @@
-<div class="banner new-background elevation2">
+<div class="banner  elevation2">
     <div class="container">
 
         <div class="row">
@@ -15,8 +15,7 @@
     </div>
 
 </div>
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid new-background">
 
         <div class="col-sm-4 col-sm-offset-4">
             <div class="center-block ">
@@ -87,7 +86,5 @@
 
             </div>
 
-    </div>
-
-</div>
+        </div>
 </div>
